--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,42 +1,48 @@
-pipeline {
-   agent any
-
-   stages {
-      stage('NPM Setup') {
-      steps {
-         sh 'npm install'
+pipeline{
+  agent { label 'nodejs8' }
+  stages{
+    stage ('checkout'){
+      steps{
+        checkout scm
       }
-   }
-
-   stage('IOS Build') {
-   steps {
-      sh 'ionic cordova build ios --release'
-     } 
-  }
-
-   stage('Android Build') {
-   steps {
-      sh 'ionic cordova build android --release'
-   }
-  }
-
-   stage('Stage Web Build') {
-      steps {
-        sh 'npm run build --prod'
+    }
+    stage ('install modules'){
+      steps{
+        sh '''
+          npm install --verbose -d 
+          npm install --save classlist.js
+        '''
+      }
+    }
+    stage ('test'){
+      steps{
+        sh '''
+          $(npm bin)/ng test --single-run --browsers Chrome_no_sandbox
+        '''
+      }
+      post {
+          always {
+            junit "test-results.xml"
+          }
+      }
+    }
+    stage ('code quality'){
+      steps{
+        sh '$(npm bin)/ng lint'
+      }
+    }
+    stage ('build') {
+      steps{
+        sh '$(npm bin)/ng build --prod --build-optimizer'
+      }
+    }
+    stage ('build image') {
+      steps{
+        sh '''
+          rm -rf node_modules
+          oc start-build angular-5-example --from-dir=. --follow
+        '''
+      }
     }
   }
-
-   stage('Publish iOS') {
-      steps {
-       echo "Publish iOS Action"
-    }
-   }
-
-   stage('Publish Android') {
-     steps {
-    echo "Publish Android API Action"
-   }
-  }
-
- }
 }
